cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread")
project( mjpeg_streamer )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( mjpeg_streamer main.cpp MJPEGWriter.cpp  MJPEGWriter.h )
target_link_libraries(mjpeg_streamer ${OpenCV_LIBS} )
